--- a/burrow/Cargo.toml
+++ b/burrow/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "burrow"
-version = "0.1.0"
-edition = "2021"
+description.workspace = true
+documentation.workspace = true
+repository.workspace = true
+readme.workspace = true
+categories.workspace = true
+license.workspace = true
+authors.workspace = true
+version.workspace = true
+edition.workspace = true
+
 
 [dependencies]
-burrow_derive = { path = "../burrow_derive", version = "0.1.0", optional = true }
+burrow_derive = { workspace = true, optional = true }
 
 [features]
 default = ["derive"]
